@@ -1,3 +1,4 @@
+- Pike R. Alpha : dinamic "random-seed" implementation ( http://www.insanelymac.com/forum/topic/301350-lets-make-random-seed-really-random/ )
 - ErmaC : getCPUTick() helper function ( http://www.insanelymac.com/forum/topic/301350-lets-make-random-seed-really-random/ )
 - ErmaC : Add Yosemite Icons detection for chameleon UI
 - blackosx : Add chameleon UI Icons for Yosemite
